# oesdevteam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  run_features.py
.github/workflows/: ci.yml
config/: api_contract.yaml  models.yaml  rules.yaml  sre_review.yaml
docs/: ARCHITECTURE.md  INTEGRATION_EXAMPLE.md  MIGRATION_PLAN.md  PRE_REVIEW_RULES_ROADMAP.md  RESILIENCE_RULES.md  SERVICE_MANIFEST_SPEC.md
prompts/reviewers/: business_expert.md  senior_backend.md  senior_data.md  senior_domain_logic.md  senior_frontend.md  senior_go.md  senior_performance.md  senior_sre.md
scripts/: smoke_squad.py
security/: audit_gate.py  config.yaml  security_audit.py
src/: __init__.py  claude_bridge.py  config.py  models.py
src/controller/: __init__.py  domain_context.py  escalation.py  learning.py
src/gates/: __init__.py  api_contract_gate.py  base.py  code_review_gate.py  sre_review_gate.py
src/observability/: __init__.py  cost_tracker.py  langfuse_exporter.py
src/reviewers/: __init__.py  findings.py  namespace_config.py  runner.py  squad.py
src/rules/: __init__.py  checks.py  engine.py  rules_go.py
tests/: conftest.py  test_api_contract_gate.py  test_cli_integration.py  test_code_review_gate.py  test_controller.py  test_domain_context.py  test_findings.py  test_model_routing.py  test_observability.py  test_resilience_rules.py  test_reviewer_squad.py  test_rules_engine.py  test_security_audit.py  test_sre_review_gate.py
